Create animation and Finashed Page

--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -10,7 +10,7 @@
   },
   "think": {
     "word1": "فكر بشكل كبير",
-    "word2": "ونحن ننجز"
+    "word2": " ونحن نُنفِّذ."
   },
   "form": {
     "name": {
@@ -21,7 +21,7 @@
       "label": "البريد الإلكتروني",
       "placeholder": "أدخل بريدك الإلكتروني هنا"
     },
-    "phon": {
+    "phone": {
       "label": "رقم الهاتف",
       "placeholder": "أدخل رقم هاتفك"
     },
