--- a/src/i18n/locales/en/translations.json
+++ b/src/i18n/locales/en/translations.json
@@ -24,7 +24,7 @@
       "placeholder": "Enter your email here"
     },
 
-    "phon": {
+    "phone": {
       "label": "Phone Number",
       "placeholder": "Enter your number "
     },
@@ -32,7 +32,7 @@
       "label": "Type Service",
       "items": ["Website", "Application"]
     },
-    
+
     "Submit": "Submit"
   }
 }
