--- a/src/i18n/locales/ar/translations.json
+++ b/src/i18n/locales/ar/translations.json
@@ -29,6 +29,15 @@
       "label": "نوع الخدمة",
       "items": ["موقع إلكتروني", "تطبيق"]
     },
-    "Submit": "إرسال"
+    "Submit": "إرسال",
+
+    "validation": {
+      "noNumbers": "الاسم يجب ألا يحتوي على أرقام",
+      "required": "هذا الحقل مطلوب. يرجى التأكد من إدخاله.",
+      "service": "يجب أختيار نوع الخدمة التى تحتاجها",
+      "requiredName": "حقل الاسم مطلوب. يرجى إدخال اسمك الكامل.",
+      "invalidEmail": "عنوان البريد الإلكتروني الذي أدخلته غير صالح. يرجى إدخال عنوان بريد إلكتروني بصيغة صحيحة (مثل name@example.com).",
+      "invalidPhone": "يجب أن يحتوي رقم الهاتف على أرقام فقط. يرجى إدخال رقم صحيح بدون فراغات أو رموز خاصة."
+    }
   }
 }
